--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,7 @@ Description: This package provides tools to conduct inference on the sample aver
   treatment. This package provides functions for calipered non-bipartite matching, 
   bias-corrected estimation of the sample average treatment effect and covariate-adjusted
   variance estimation.
-Imports: nbpMatching,
-          RFCDE,
-          earth,
-          LinCDE
+Imports: nbpMatching, RFCDE, earth, LinCDE
 License: use_mit_license()
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
