--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(classic_Neyman)
 export(covAdj_Variance)
 export(generate_data_dose)
 export(make_pmatrix)
-export(nbp_caliper)
+export(nbp_Caliper)
 import(LinCDE)
 import(RFCDE)
